@@ -1,5 +1,11 @@
 2001-08-10  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* libtiff/tif_getimage.c: Use memmove() instead of TIFFmemcpy()
+	in TIFFReadRGBATile() to avoid issues in cases of overlapping
+	buffers.  See Bug 69 in Bugzilla. 
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=69
+	
 	* tools/tiff2rgba.c: fixed getopt() call so that -b works again.
 
 2001-08-09  Frank Warmerdam  <warmerdam@pobox.com>
